Version Changes for Hypermail

~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

 Peter McCluskey (June 30, 2003)
  Increased max_tokens used to allocate space for linkquotes data struct.

- Jose Kahan (Jun 28, 2003)
  - Code cleaning. Removed the deprecated code for set_showhr and
    set_usetable options.

 Kent Landfield (Jun 28, 2003)
  - Arkadiusz Miskiewicz <arekm@sse.pl> reported progerr() was being 
    called with NULL instead of the previously constructed error message. 
    His supplied patches were applied. 

 Peter McCluskey (June 27, 2003)
  - Made dates in subdirectory index files reflect subdirectory date range,
    rather than the date range for the whole archive.

 Peter McCluskey (June 24, 2003)
  - Fix print_index_header_links to print MSG_ENDING date correctly (had
    been using 2 getdatestr() calls in one argument list).

 Peter McCluskey (June 20, 2003)
  - Fix a core dump with empty Date:.

 Jose Kahan (Jun 10, 2003)
  - Some extra WAI enhancements requested during the period of public comments:
    Order the date index by dates, like in subjects, add <dfn> to the start and
    end period in the indexes, change the title of "jump to first message" to
    "jump to list of messages".
  - The top respond link didn't take into account the msgid or subject. It was 
    just a plain mailto. Made it work as the bottom one.

 Jose Kahan (Jun 10, 2003)
  - Adding new messages using the -u option to an existing file sometimes 
    resulted in warnings saying "Message-ID is missing, ignoring message 
    with subject..." Patch idea submitted by Peter.

 Jose Kahan (Jun 10, 2003)
  - The incremental option (-u) always started new archives with 0001, rather
    than 0000. It will now start with 0000 as before
    For those people who had this problem and don't want to break any links to 
    their archives when rebuilding them, there's a new configuration option 
    allowing you to tell from which number you want to start your archive: 