@@ -2,10 +2,19 @@ Version Changes for Hypermail
 
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
+ Jose Kahan (Jul 1, 2003)
+  - Added WAI enhancements to the list of indexes generated by hypermail.
+    To make things perfect, we would need a new configuration option to give
+    the format of the date in the list of indexes format. I hard coded it
+    for the moment as I ran out of time to do it right now. As it has to
+    use an abbreviated date format to avoid having a too big list of indexes,
+    we can' t reuse the standard set_dateformat value.
+  - Removed warnings detected thru gcc Wall.
+
  Peter McCluskey (June 30, 2003)
   Increased max_tokens used to allocate space for linkquotes data struct.
 
-- Jose Kahan (Jun 28, 2003)
+ Jose Kahan (Jun 28, 2003)
   - Code cleaning. Removed the deprecated code for set_showhr and
     set_usetable options.
 
